[i18n] first set of translations
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/contents/_content.html.erb
+++ b/app/views/contents/_content.html.erb
@@ -1,6 +1,6 @@
 <% content_for :entity_info, flush: true do %>
   <div class="col-content-language">
-    <%= content.language.humanize %>
+    <%= t content.language, scope: [:activerecord, :attributes, :content, :languages] %>
   </div>
 <% end %>
 
