--- a/app/views/roles/form/_own_fields.html.erb
+++ b/app/views/roles/form/_own_fields.html.erb
@@ -8,9 +8,11 @@
   <div class="row form-group">
     <%= f.label :referring, class: 'col-md-3 form-control-label' %>
     <div class="col-md-9">
-      <% reffers = Role::REFERS_TO.map { |ref| [ref.humanize, ref] } %>
-      <%= f.select :referring, options_for_select(reffers, @role.referring),
-                   class: 'form-control' %>
+      <% reffers = Role::REFERS_TO.map { |ref| [t(ref, scope: [:activerecord, :attributes, :role, :refers_to]), ref] } %>
+      <%= f.select :referring,
+                   options_for_select(reffers, @role.referring),
+                   {},
+                   { class: 'custom-select' } %>
     </div>
   </div>
   <div class="row form-group">
