--- a/app/views/contents/show/_content.html.erb
+++ b/app/views/contents/show/_content.html.erb
@@ -4,7 +4,7 @@
 <div class="row">
   <label class="col-md-3"><strong><%= Content.human_attribute_name :language %></strong></label>
   <div class="col-md-9">
-    <%= content.language.humanize %>
+    <%= t content.language, scope: [:activerecord, :attributes, :content, :languages] %>
   </div>
 </div>
 <div class="row">
