--- a/app/views/deeds/show.html.erb
+++ b/app/views/deeds/show.html.erb
@@ -88,14 +88,14 @@
     <div class="col-md-6">
       <div class="card">
         <div class="card-header">
-          <%= model_name_with_icon Content %>
+          <%= model_name_with_icon Content, :singular %>
         </div>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <% if @deed.content.nil? %>
               <em class="text-muted">no Content</em>
             <% else %>
-              <%= @deed.content.language.humanize %>
+              <%= t @deed.content.language, scope: [:activerecord, :attributes, :content, :languages] %>
               <span class="pull-right">
                 <%= link_to_show_entity @deed.content %>
               </span>
