--- a/app/views/sources/show/_content.html.erb
+++ b/app/views/sources/show/_content.html.erb
@@ -10,7 +10,7 @@
 <div class="row">
   <label class="col-md-3"><strong><%= Source.human_attribute_name :source_type %></strong></label>
   <div class="col-md-9">
-    <%= source.source_type %>
+    <%= t source.source_type, scope: [:activerecord, :attributes, :source, :source_types] %>
   </div>
 </div>
 <div class="row">
@@ -21,7 +21,7 @@
 </div>
 <% if native %>
   <div class="row">
-    <label class="col-md-3"><strong><%= Source.human_attribute_name :archives %></strong></label>
+    <label class="col-md-3"><strong><%= Archive.model_name.human(count: 2) %></strong></label>
     <ul class="col-md-9 list-group list-group-flush" id="archives-accordion" role="tablist" aria-multiselectable="true">
       <%= render partial: 'archives/nested_show', collection: source.archives, as: :archive %>
     </ul>
