--- a/app/views/archives/show/_content.html.erb
+++ b/app/views/archives/show/_content.html.erb
@@ -21,19 +21,27 @@
 </div>
 <% if native %>
   <div class="row">
-    <label class="col-md-3"><strong><%= Archive.human_attribute_name :sources %></strong></label>
+    <label class="col-md-3"><strong><%= Source.model_name.human(count: 2) %></strong></label>
     <% if archive.sources.count > 0 %>
       <ul class="col-md-9 list-group list-group-flush" id="archive-sources-accordion" role="tablist" aria-multiselectable="true">
         <%= render partial: 'sources/nested_show', collection: archive.sources, as: :source %>
       </ul>
     <% else %>
-      <div class="col-md-9">none associated</div>
+      <div class="col-md-9">
+        <%= t :non_associated, scope: [:views] %>
+      </div>
     <% end %>
   </div>
   <div class="row">
-    <label class="col-md-3"><strong><%= Archive.human_attribute_name :storages %></strong></label>
-    <ul class="col-md-9 list-group list-group-flush" id="archive-storages-accordion" role="tablist" aria-multiselectable="true">
-      <%= render partial: 'storages/nested_show', collection: archive.storages, as: :storage %>
-    </ul>
+    <label class="col-md-3"><strong><%= Storage.model_name.human(count: 2) %></strong></label>
+    <% if archive.storages.count > 0 %>
+      <ul class="col-md-9 list-group list-group-flush" id="archive-storages-accordion" role="tablist" aria-multiselectable="true">
+        <%= render partial: 'storages/nested_show', collection: archive.storages, as: :storage %>
+      </ul>
+    <% else %>
+      <div class="col-md-9">
+        <%= t :non_associated, scope: [:views] %>
+      </div>
+    <% end %>
   </div>
 <% end %>
