--- a/app/views/archives/_archive.html.erb
+++ b/app/views/archives/_archive.html.erb
@@ -25,14 +25,14 @@
   <div class="btn-group btn-group-sm" role="group">
     <%= link_to storages_path(archive_id: archive.id),
                 class: 'btn btn-sm btn-secondary',
-                title: "show #{Storage.model_name.plural.humanize} linked",
+                title: t(:show_linked_storages, scope: [:views, :archive]),
                 data: { toggle: 'tooltip' } do %>
       <%= archive.storages.count %>
       <%= icon_for Storage %>
     <% end %>
     <%= link_to sources_path(archive_id: archive.id),
                 class: 'btn btn-sm btn-secondary',
-                title: "show #{Source.model_name.plural.humanize} linked",
+                title: t(:show_linked_sources, scope: [:views, :archive]),
                 data: { toggle: 'tooltip' } do %>
       <%= archive.sources.count %>
       <%= icon_for Source %>
