--- a/app/views/shared/show/_footer.html.erb
+++ b/app/views/shared/show/_footer.html.erb
@@ -8,5 +8,5 @@
   <% end %>
 <% end %>
 <button type="button" class="btn btn-sm btn-info pull-right" data-dismiss="modal" aria-label="Close">
-  Close
+  <%= t :close, scope: [:views, :modals] %>
 </button>
