[i18n][view] fixed broken views
and scaffold for missing translations

Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -3,7 +3,7 @@
   <%= render partial: 'shared/index/main_action_btn',
              locals: { path_to_new_entity: new_content_path,
                        path_to_refresh: contents_path,
-                       entity_name: Content.model_name.human } %>
+                       entity_model: Content } %>
 </h1>
 
 <div class="row">
