--- a/app/views/deeds/index.html.erb
+++ b/app/views/deeds/index.html.erb
@@ -3,7 +3,7 @@
   <%= render partial: 'shared/index/main_action_btn',
              locals: { path_to_new_entity: new_deed_path,
                        path_to_refresh: deeds_path,
-                       entity_name: Deed.model_name.human } %>
+                       entity_model: Deed } %>
 </h1>
 
 <div class="row">
