--- a/app/views/mentions/index.html.erb
+++ b/app/views/mentions/index.html.erb
@@ -3,7 +3,7 @@
   <%= render partial: 'shared/index/main_action_btn',
              locals: { path_to_new_entity: new_mention_path,
                        path_to_refresh: mentions_path,
-                       entity_name: Mention.model_name.human } %>
+                       entity_model: Mention } %>
 </h1>
 
 <div class="row">
