--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -3,7 +3,7 @@
   <%= render partial: 'shared/index/main_action_btn',
              locals: { path_to_new_entity: new_place_path,
                        path_to_refresh: places_path,
-                       entity_name: Place.model_name.human } %>
+                       entity_model: Place } %>
 </h1>
 
 <div class="row">
