--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -3,7 +3,7 @@
   <%= render partial: 'shared/index/main_action_btn',
              locals: { path_to_new_entity: new_role_path,
                        path_to_refresh: roles_path,
-                       entity_name: Role.model_name.human } %>
+                       entity_model: Role } %>
 </h1>
 
 <div class="row">
