--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -3,7 +3,7 @@
   <%= render partial: 'shared/index/main_action_btn',
              locals: { path_to_new_entity: new_person_path,
                        path_to_refresh: people_path,
-                       entity_name: Person.model_name.human } %>
+                       entity_model: Person } %>
 </h1>
 
 <div class="row">
