[i18n][view] Content and Content Translation
translation and UI fixes

Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/contents/content_translations/_form.html.erb
+++ b/app/views/contents/content_translations/_form.html.erb
@@ -5,15 +5,13 @@
        class="card">
     <div id="heading-translation-new"
          class="card-header"
-         role="tab">
-      <a data-toggle="collapse"
+         role="tab" data-toggle="collapse"
          data-parent="#content-content-translations-accordion"
          href="#collapse-translation-new"
          aria-expanded="true"
          aria-controls="collapse-translation-new">
-        <%= model_name_with_icon ContentTranslation, :singular %>
-        <span class="tag tag-default">ID: new</span>
-      </a>
+      <%= model_name_with_icon ContentTranslation, :singular %>
+      <span class="tag tag-warning pull-right"><%= t(:unsaved, scope: [:views, :content_translation, :modals]) %></span>
     </div>
     <div id="collapse-translation-new"
          class="card-block collapse"
@@ -23,7 +21,9 @@
         <%= t_f.label :language, class: 'col-md-3 form-control-label' %>
         <div class="col-md-9">
           <%= t_f.select :language,
-                         options_for_select(Content::LANGUAGES.map { |e| e.humanize }),
+                         options_for_select(Content::LANGUAGES.map {
+                             |e| [t(e, scope: [:activerecord, :attributes, :content, :languages]), e]
+                         }),
                          {},
                          { class: 'custom-select' } %>
         </div>
@@ -40,20 +40,22 @@
             <%= content_tag :a,
                             class: 'btn btn-sm btn-outline-primary',
                             id: 'btn-content-translation-create-new',
-                            title: "Create #{ContentTranslation.model_name.human}",
+                            title: t(:create, scope: [:helpers, :submit]),
                             data: {
                                 toggle: 'tooltip'
                             } do %>
-                <%= icon('save', class: 'fa-fw') %> Create Translation
+                <%= icon('save', class: 'fa-fw') %>
+                <%= t(:create, scope: [:helpers, :submit]) %>
             <% end %>
             <%= content_tag :a,
                         class: 'btn btn-sm btn-outline-danger',
-                        id: 'btn-content-translation-delete-new',
-                        title: "Delete unsaved #{ContentTranslation.model_name.human}",
+                        id: 'btn-content-translation-abort-new',
+                        title: t(:abort, scope: [:helpers]),
                         data: {
                             toggle: 'tooltip'
                         } do %>
-                <%= icon('trash', class: 'fa-fw') %> Delete unsaved Translation
+                <%= icon('trash', class: 'fa-fw') %>
+                <%= t(:abort, scope: [:helpers]) %>
             <% end %>
           </div>
         </div>
