--- a/app/views/contents/form/_nested_fields.html.erb
+++ b/app/views/contents/form/_nested_fields.html.erb
@@ -1,23 +1,24 @@
-<div class="container-fluid">
-  <div class="row">
-    <label class="col-md-3 form-control-label">
-      <%= model_name_with_icon ContentTranslation, :plural %>
-    </label>
-    <div id="content-content-translations-accordion" class="col-md-9" role="tablist" aria-multiselectable="true">
-      <%= f.fields_for :translations, @content.translations.to_a do |t_f| %>
+<div class="row form-group">
+  <label class="col-md-3 form-control-label">
+    <%= model_name_with_icon ContentTranslation, :plural %>
+  </label>
+  <div id="content-content-translations-accordion" class="col-md-9" role="tablist" aria-multiselectable="true">
+    <% @content.translations.each do |translation| %>
+      <%= fields_for :translations, translation do |t_f| %>
         <div id="associated-content-translation-<%= t_f.object.id %>"
              class="card">
           <div id="heading-translation-<%= t_f.object.id %>"
                class="card-header"
-               role="tab">
-            <a data-toggle="collapse"
+               role="tab"
+               data-toggle="collapse"
                data-parent="#content-content-translations-accordion"
                href="#collapse-translation-<%= t_f.object.id %>"
                aria-expanded="true"
                aria-controls="collapse-translation-<%= t_f.object.id %>">
-              <%= model_name_with_icon ContentTranslation, :singular %>
-              <span class="tag tag-default">ID: <%= t_f.object.id %></span>
-            </a>
+            <%= model_name_with_icon ContentTranslation, :singular %>
+            &mdash;
+            <%= t(t_f.object.language, scope: [:activerecord, :attributes, :content, :languages]) %>
+            <span class="tag tag-default pull-right">ID: <%= t_f.object.id %></span>
           </div>
           <div id="collapse-translation-<%= t_f.object.id %>"
                class="card-block collapse"
@@ -27,10 +28,13 @@
               <%= t_f.label :language, class: 'col-md-3 form-control-label' %>
               <div class="col-md-9">
                 <%= t_f.select :language,
-                               options_for_select(Content::LANGUAGES.map { |e| e.humanize },
-                                                  (t_f.object.language ? t_f.object.language.humanize : nil)),
+                               options_for_select(
+                                   Content::LANGUAGES.map {
+                                       |e| [t(e, scope: [:activerecord, :attributes, :content, :languages]), e]
+                                   },
+                                   t_f.object.language ? t_f.object.language.humanize : nil),
                                {},
-                               { class: 'form-control' } %>
+                               { class: 'custom-select' } %>
               </div>
             </div>
             <div class="row form-group">
@@ -47,23 +51,25 @@
                               method: :delete,
                               class: 'btn btn-sm btn-outline-primary',
                               id: "btn-content-translation-update-#{t_f.object.id}",
-                              title: "Update #{ContentTranslation.model_name.human}",
+                              title: t(:update, scope: [:helpers, :submit]),
                               data: {
                                   toggle: 'tooltip'
                               } do %>
-                    <%= icon('save', class: 'fa-fw') %> Update Translation
+                    <%= icon('save', class: 'fa-fw') %>
+                    <%= t :update, scope: [:helpers, :submit] %>
                   <% end %>
                   <%= link_to content_content_translation_path(content_id: @content.id, id: t_f.object.id),
                               remote: true,
                               method: :delete,
                               class: 'btn btn-sm btn-outline-danger',
                               id: "btn-content-translation-delete-#{t_f.object.id}",
-                              title: "Delete #{ContentTranslation.model_name.human}",
+                              title: t(:delete, scope: [:helpers]),
                               data: {
-                                  confirm: 'Do you really want to delete this item?',
+                                  confirm: t(:delete, scope: [:helpers, :confirmation]),
                                   toggle: 'tooltip'
                               } do %>
-                    <%= icon('trash', class: 'fa-fw') %> Delete Translation
+                    <%= icon('trash', class: 'fa-fw') %>
+                    <%= t :delete, scope: [:helpers] %>
                   <% end %>
                 </div>
               </div>
@@ -71,15 +77,15 @@
           </div>
         </div>
       <% end %>
-      <div class="">
-        <%= content_tag :a,
-                        icon('plus', class: 'fa-fw'),
-                        id: 'btn-add-new-content-translation',
-                        class: 'btn btn-sm btn-primary pull-right',
-                        role: 'button',
-                        title: 'Add another Content Translation',
-                        data: { toggle: 'tooltip' } %>
-      </div>
+    <% end %>
+    <div class="">
+      <%= content_tag :a,
+                      icon('plus', class: 'fa-fw'),
+                      id: 'btn-add-new-content-translation',
+                      class: 'btn btn-sm btn-primary pull-right',
+                      role: 'button',
+                      title: t(:add_new_translation, scope: [:views, :content, :modals]),
+                      data: { toggle: 'tooltip' } %>
     </div>
   </div>
 </div>
