--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,7 @@
 @import "00_framework_and_overrides";
 @import "01_table";
 @import "02_forms";
+@import "03_modals";
 @import "09_flash";
 
 @import "archive";
