--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,11 +22,11 @@
 @import "contents";
 @import "content_translations";
 @import "deeds";
+@import "documents";
 @import "mentions";
 @import "people";
 @import "places";
 @import "roles";
-@import "sources";
 @import "storage";
 
 div.row-spacer {
